test/error/error.input61.zc
Variable is not a pointer type:x on line 3
